--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-03  Peter Ekberg  <spam.protected>
+
+	* ltmain.m4sh (cwrappersource): clean up warnings and
+	#include errors on MinGW.
+
 2004-11-01  Peter Ekberg  <spam.protected>
 
 	* config/ltmain.m4sh (cwrappersource): clean up warnings and
