--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-03  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.m4sh (cwrappersource): Cast isalpha arguments correctly.
+
 2004-11-03  Peter Ekberg  <spam.protected>
 
 	* ltmain.m4sh (cwrappersource): clean up warnings and
