--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-07  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* m4/ltoptions.m4: Change all references of LT_LIBTOOL_INIT
+	to LT_INIT.
+
 2004-11-05  Peter Ekberg  <spam.protected>
 
 	* ltmain.m4sh (cwrappersource): clean up other warning on MinGW.
