--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-09  Gary V. Vaughan  <gary@gnu.org>,
+	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* doc/libtool.texi (libtool script contents): Fix description
+	of need_lib_prefix.
+
 2004-11-08  Peter Ekberg  <spam.protected>
 
 	* config/ltmain.m4sh (func_mode_link): forward thread
