--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-09  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* doc/libtool.texi (all over): White space cleanup:
+	two spaces at start of sentence, no TABs.
+
 2004-11-09  Gary V. Vaughan  <gary@gnu.org>,
 	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
