--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-17  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* tests/demo-nopic.test: Correctly skip hppa, x86_64, and s390*.
+	Reported by Daniel Reed <djr@redhat.com>.
+
 2004-10-26  Gary Vaughan <gary@gnu.org>
 
 	* config/ltmain.in (func_mode_link): When linking an installed
