--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-17  Mats Rynge <rynge@isi.edu>
+
+	* libtool.m4 [solaris]: Added missing 'with linker' flags to
+	-z allextract ... -z defaultextract flags
+
 2004-11-14  Gary V. Vaughan  <gary@gnu.org>
 
 	* configure.ac (APIVERSION): New substituted variable.
