--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-17  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
+	[aix4/aix5 !ia64]: Set whole_archive_flag_spec to '$convenience'
+	so convenience libs are really added to the link cmdline.
+
 2004-11-17  Mats Rynge <rynge@isi.edu>
 
 	* libtool.m4 [linux]: Use only the CC basename in case statment
