* doc/libtool.texi (Libltdl interface): The path separator is system-dependent.

--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -3430,7 +3430,9 @@ The system dependent library search path
 @end enumerate
 
 Each search path must be a colon-separated list of absolute directories,
-for example, @code{"/usr/lib/mypkg:/lib/foo"}.
+for example, @code{"/usr/lib/mypkg:/lib/foo"}.  On Windows, the path
+separator is a semi-colon.  The directory names may not contain the
+path separator.
 
 If the same module is loaded several times, the same handle is returned.
 If @code{lt_dlopen} fails for any reason, it returns @code{NULL}.
@@ -3487,8 +3489,8 @@ appending as if @code{lt_dladdsearchdir} had been called.  Return 0 on success.
 
 @deftypefun int lt_dlsetsearchpath (const char *@var{search_path})
 Replace the current user-defined library search path with
-@var{search_path}, which must be a colon-separated list of absolute
-directories.  Return 0 on success.
+@var{search_path}, which must be a colon-separated (semi-colon on Windows) list
+of absolute directories.  Return 0 on success.
 @end deftypefun
 
 @deftypefun {const char *}lt_dlgetsearchpath (void)
@@ -3499,9 +3501,9 @@ Return the current user-defined library search path.
 In some applications you may not want to load individual modules with
 known names, but rather find all of the modules in a set of
 directories and load them all during initialisation.  With this function
-you can have libltdl scan the colon delimited directory list in
-@var{search_path} for candidates, and pass them, along with @var{data}
-to your own callback function, @var{func}.  If @var{seach_path} is
+you can have libltdl scan the colon delimited directory list (semi-colon on
+Windows) in @var{search_path} for candidates, and pass them, along with
+@var{data} to your own callback function, @var{func}.  If @var{seach_path} is
 @samp{NULL}, then search all of the standard locations that
 @code{lt_dlopen} would examine.  This function will continue to make
 calls to @var{func} for each file that it discovers in @var{search_path}
