--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-18  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (_LT_LINKER_SHLIBS) [cygwin/mingw/pw32]:
+	tag-protect setting of ld_shlibs.
+
 2004-11-17  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* doc/libtool.texi (Libltdl interface): The path separator
