* doc/libtool.texi (Libltdl interface): Typos.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-11-19  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* doc/libtool.texi (Libltdl interface): Typos.
+
 	* doc/libtool.texi (Libltdl interface): Document public macros
 	LT_PATHSEP_CHAR, LT_DIRSEP_CHAR, use in path descriptions.
 
