--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-11-22  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* m4/libtool.m4, tests/demo-nopic.test: Undo bogus commit.
+
 	* config/ltmain.m4sh (func_mode_link), tests/objectlist.test:
 	Make sure the argument to `-objectlist' may contain spaces.
 
