--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-11-22  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* m4/libtool.m4 (_LT_TAG_COMPILER): Document that with_gcc is
+	tag-dependent.
+
 	* m4/libtool.m4, tests/demo-nopic.test: Undo bogus commit.
 
 	* config/ltmain.m4sh (func_mode_link), tests/objectlist.test:
