--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-22  Gary V. Vaughan  <gary@gnu.org>
+
+	* doc/libtool.texi (Invoking libtoolize): Improve documentation
+	for use of ACLOCAL_AMFLAGS and AC_CONFIG_MACRO_DIR.
+
 2004-11-22  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* m4/libtool.m4 (_LT_TAG_COMPILER): Document that with_gcc is
