--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2004-11-23  Gary V. Vaughan  <gary@gnu.org>
 
+	If the user's login shell is something crazy like, oooh,
+	/bin/tcsh, trying to execute bourne shell helper scripts with
+	the `$SHELL /path/to/helper $helper_flags' idiom incase the
+	execute bits were lost by say, eeer, cvs, is gonna blow up in
+	our faces.  This changeset tries to save these people from
+	their shells^H^H^H^H^H^H^H^H^Hmselves :->
+
+	* tests/defs.m4sh (SHELL): Move definition from here...
+	* config/general.m4sh (SHELL): ...to here.
+
+2004-11-23  Gary V. Vaughan  <gary@gnu.org>
+
 	The ltdl.h header is the published interface to libltdl, and
 	is thus not installed to $prefix/include/libltdl.  It has always
 	been used with `#include <ltdl.h>', so move just that one file
