* libtool.m4 [linux] (AC_LIBTOOL_LANG_CXX_CONFIG, AC_LIBTOOL_PROG_COMPILER_PIC, AC_LIBTOOL_PROG_LD_SHLIBS), NEWS, THANKS: Support for Portland Group (aka "pgi") compilers.

--- a/THANKS
+++ b/THANKS
@@ -27,6 +27,7 @@ Eric Estievenart                eric@via.ecp.fr
 Frank Ch. Eigler                fche@cygnus.com
 H.J. Lu                         hjl@gnu.org
 Ian Lance Taylor                ian@cygnus.com
+Jeff Squyres                    jsquyres@lam-mpi.org
 Joel N. Weber II                devnull@gnu.org
 Joseph Beckenbach III           jrb3@best.com
 Kenneth Albanowski              kjahds@kjahds.com
