--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-24  Jeff Squyres <jsquyres@lam-mpi.org>
+
+	* libtool.m4 [linux] (AC_LIBTOOL_LANG_CXX_CONFIG,
+	AC_LIBTOOL_PROG_COMPILER_PIC, AC_LIBTOOL_PROG_LD_SHLIBS),
+	NEWS, THANKS: Support for Portland Group (aka "pgi") compilers.
+
 2004-11-18  Daniel Reed <djr@redhat.com>
 
 	* m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [linux]: Interpret
