--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-24  Jeff Squyres <jsquyres@lam-mpi.org>
+
+	* m4/libtool.m4 [linux] (_LT_COMPILER_PIC, _LT_LINKER_SHLIBS,
+	_LT_LANG_CXX_CONFIG), NEWS, THANKS: Support for Portland Group
+	(aka "pgi") compilers.
+
 2004-11-24  Gary V. Vaughan  <gary@gnu.org>
 
 	* Makefile.am: Move Autotest rules from here...
