--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* config/ltmain.m4sh: Add fully-qualified paths to temp_rpath
+	rather than unqualified paths in order to avoid possible errors
+	when computing the fully-qualified path later.
+
 2004-11-24  Jeff Squyres <jsquyres@lam-mpi.org>
 
 	* m4/libtool.m4 [linux] (_LT_COMPILER_PIC, _LT_LINKER_SHLIBS,
