--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/loaders/loadlibrary.c: Remove unneeded
+	file-static variable.
+
 2004-11-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* config/ltmain.m4sh: Add fully-qualified paths to temp_rpath
